change: updated tests, separated the tests into new folders, rename methods and fields; feature: @Mapping ignore fields on methods in mappers